dev/kustomize/env/example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,HEAD,PATCH,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,x-requested-with,cache-control,content-type,x-openidm-nosession,x-openidm-password,x-openidm-username,if-match,if-none-match"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # Add your allowed origins here...
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8888"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Expose-Headers: WWW-Authenticate";
  name: forgerock
spec:
  rules:
  - host: default.iam.example.com
    http:
      paths:
      - backend:
          serviceName: openam
          servicePort: 80
        path: /am
      - backend:
          serviceName: openidm
          servicePort: 80
        path: /openidm
      - backend:
          serviceName: openidm
          servicePort: 80
        path: /admin
      # end user UI currently has its own ingress. Needs to rewrite the url path...
      # - backend:
      #     serviceName: end-user-ui
      #     servicePort: 80
      #   path: /enduser-ui          
      - backend:
          serviceName: openig
          servicePort: 80
        path: /ig
  tls:
  - hosts:
    - default.iam.example.com
    secretName: sslcert
